--- a/landing.css
+++ b/landing.css
@@ -1,9 +1,9 @@
 
 header{
-  text-align: center;
-  font-size: 20px;
-  border-bottom: 2px solid #ccc;
-  padding: 20px 0;
+  	text-align: center;
+  	font-size: 20px;
+  	border-bottom: 2px solid #ccc;
+  	padding: 20px 0;
 }
 
 nav * {
@@ -11,42 +11,101 @@ nav * {
 }
 
 body {
-  background-color: #121212;
-  color: #a0a0a0;
-  font-family: "Segoe UI", Arial, sans-serif;
-  font-size: 25px;
+  	background-color: #121212;
+  	color: #a0a0a0;
+  	font-family: "Segoe UI", Arial, sans-serif;
+  	font-size: 25px;
+}
+
+h1{
+	margin-bottom: 0px;
 }
 
 h1, h2, h3, h4, h5, h6, b {
-  color: white;
+  	color: white;
 }
 
 a{
-  text-decoration: none;
-  color: inherit;
+  	text-decoration: none;
+  	color: inherit;
 }
 
 a:hover{
-  color: #bb86fc;
+  	color: #bb86fc;
 }
 
 
 section {
-  border-bottom: 2px solid #ccc;
-  padding: 20px 0;
+	border-bottom: 2px solid #ccc;
+  	padding: 20px 0;
 }
 
-.main-logo{
-  margin-left:300%;
+
+.smooth-rectangle {
+	color: #ccc;
+	padding: 1rem;
+	background-color: #4a008f;
+	border-radius: 20px;
+}
+
+.smooth-rectangle:hover{
+	background-color: #400478;
+	color: #ccc;
 }
 
 /* Main */
 
 #wrapper-main-section{
-  text-align: center;
+	padding-bottom: 5rem;
+	font-size: 30px;
+	text-align: center;
+}
+
+#wrapper-main-section-media{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 5rem;
+}
+
+#wrapper-deskup-description-section{
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	padding-left: 30rem;
+	padding-right: 40rem;
+	text-align: left;
+}
+
+#wrapper-deskup-description-section p{
+	min-width: 300px;
+}
+
+#wrapper-open-source-description-section{
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+	text-align: left;
+}
+
+#wrapper-open-source-description-section p{
+	padding-left: 30rem;
+	padding-right: 30rem;
+}
+
+#wrapper-open-source-description-section-interactive{
+
+	flex-direction: row;
+	display: flex;
+	gap: 1rem;
 }
 
 #wrapper-photo{
-  width: 128px;
-  margin-bottom: 10px;
+  	width: 128px;
+  	margin-bottom: 10px;
 }
