--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,14 @@ header{
   	padding: 20px 0;
 }
 
-nav * {
-	top: 0px;
-	z-index: 1000;
+header{
 	position: sticky;
+	top: 0;
+	z-index: 1000;
+	background-color: #121212;
+}
+
+nav * {
     display: inline;
 }
 
@@ -77,7 +81,7 @@ section {
 	display: flex;
 	align-items: center;
 	gap: 1rem;
-	padding-left: 30rem;
+	padding-left: 20%;
 	padding-right: 40rem;
 	text-align: left;
 }
