--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,93 @@
-
 header{
-  	text-align: center;
-  	font-size: 20px;
-  	border-bottom: 2px solid #ccc;
-  	padding: 20px 0;
-	position: sticky;
-	top: 0;
-	z-index: 1000;
-	background-color: #121212;
+	text-align: center;
+	font-size: 20px;
+	border-bottom: 2px solid #ccc;
+	padding: 20px 0;
+  	position: sticky;
+  	top: 0;
+  	z-index: 1000;
+  	background-color: #121212;
 }
 
 nav * {
-    display: inline;
+  	display: inline;
 }
 
 body {
-  	background-color: #121212;
-  	color: #a0a0a0;
-  	font-family: "Segoe UI", Arial, sans-serif;
-  	font-size: 25px;
+	background-color: #121212;
+	color: #a0a0a0;
+	font-family: "Segoe UI", Arial, sans-serif;
+	font-size: 25px;
 }
 
 h1{
-	margin-bottom: 0px;
+  	margin-bottom: 0px;
 }
 
 h1, h2, h3, h4, h5, h6, b {
-  	color: white;
+	color: white;
 }
 
 a{
-  	text-decoration: none;
-  	color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 a:hover{
-  	color: #bb86fc;
+	color: #bb86fc;
 }
 
 
 section {
-	border-bottom: 2px solid #ccc;
-  	padding: 20px 0;
+  	border-bottom: 2px solid #ccc;
+	padding: 20px 0;
 }
 
 
 .smooth-rectangle {
-	color: #ccc;
-	padding: 1rem;
-	background-color: #4a008f;
-	border-radius: 20px;
+  	color: #ccc;
+  	padding: 1rem;
+  	background-color: #4a008f;
+  	border-radius: 20px;
 }
 
 .smooth-rectangle:hover{
-	background-color: #400478;
-	color: #ccc;
+  	background-color: #400478;
+  	color: #ccc;
 }
 
-/* Main */
+footer{
+	background: #121212;
+	padding: 1rem 2rem;
+	display: flex;
+	justify-content: center;
+	gap: 4rem;
+	font-size: 15px;
+}
+
+footer img{
+	display: block;
+	width: 25px;
+	height: 25px;
+}
+
+footer p{
+	margin: 0;
+	line-height: 1;
+	position: relative;
+	top: 5px;
+
+}
+
+.footer-logo{
+	font-size: 25px;
+	display: flex;
+	align-items: center;
+	gap: 0.1rem;
+	line-height: 1;
+}
+
+/* Wrappers */
 
 #wrapper-main-section{
 	padding-bottom: 5rem;
@@ -99,10 +129,9 @@ section {
 }
 
 #wrapper-open-source-description-section p{
+	padding-top: 0;
 	text-align:center;
-	width: 30%;
-	min-width: 25rem;
-	max-width: 300px;
+	width: 30rem;
 }
 
 #wrapper-open-source-description-section-interactive{
@@ -112,6 +141,8 @@ section {
 }
 
 #wrapper-photo{
-  	width: 128px;
-  	margin-bottom: 10px;
+	width: 128px;
+	margin-bottom: 10px;
 }
+
+
