--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 header{
+	height: 2rem;
 	text-align: center;
 	font-size: 20px;
 	border-bottom: 2px solid #ccc;
@@ -7,10 +8,23 @@ header{
   	top: 0;
   	z-index: 1000;
   	background-color: #121212;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100vw;
 }
 
 nav * {
   	display: inline;
+}
+
+nav {
+	display: flex;
+	flex-direction: row;
+	gap: 1rem;
+	width: 100vw;
+	align-items: center;
+	justify-content: center;
 }
 
 body {
@@ -65,6 +79,10 @@ footer{
 	font-size: 15px;
 }
 
+footer a:hover{
+	filter: blur(2px);
+}
+
 footer img{
 	display: block;
 	width: 25px;
@@ -83,8 +101,13 @@ footer p{
 	font-size: 25px;
 	display: flex;
 	align-items: center;
-	gap: 0.1rem;
+	gap: 0.4rem;
 	line-height: 1;
+}
+
+.footer-logo img{
+	width: 25px;
+	height: 25px;
 }
 
 /* Wrappers */
