--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ a:hover{
 
 
 section {
-  	border-bottom: 2px solid #ccc;
 	padding: 20px 0;
 }
 
@@ -125,6 +124,7 @@ footer p{
 /* Wrappers */
 
 #wrapper-main-section{
+	padding-top: 3rem;
 	padding-bottom: 5rem;
 	font-size: 30px;
 	text-align: center;
@@ -143,9 +143,10 @@ footer p{
 	display: flex;
 	align-items: center;
 	gap: 1rem;
-	padding-left: 20%;
+	padding-left: 35%;
 	padding-right: 40rem;
 	text-align: left;
+	width: 30rem;
 }
 
 #wrapper-deskup-description-section p{
